# biosoup

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: biosoup.yml
include/: meson.build
include/biosoup/: nucleic_acid.hpp  overlap.hpp  progress_bar.hpp  read.hpp  sequence.hpp  timer.hpp
test/: meson.build  nucleic_acid_test.cpp  progress_bar_test.cpp  sequence_test.cpp  timer_test.cpp
